--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -31,7 +31,9 @@
 
 			<div class="content">
 				<div class="screenshot mail">
-					<img src="images/mail.png" width="124" height="165" />
+					<a href="https://mail.google.com/">
+						<img src="images/mail.png" width="124" height="165" />
+					</a>
 				</div>
 				<div class="section about">
 					<h2>Thank you for purchasing FileBot! 💯</h2>
