--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -37,7 +37,7 @@
 					<ul>
 						<li><a href="forums/">Forums</a></li>
 						<li><a href="manual.html">FAQ</a></li>
-						<li><a href="download.html">Download</a></li>
+						<li><a href="#download">Download</a></li>
 					</ul>
 				</div>
 			</div>
