--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -1,88 +1,88 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<base href="@{link.site.index}" target="_blank">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<base href="@{link.site.index}" target="_blank">
 
-		<title>Thank you for purchasing FileBot! 💯</title>
-		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
-		<link rel="stylesheet" href="base.css" type="text/css">
-		<link rel="stylesheet" href="thanks.css" type="text/css">
-	</head>
-	<body>
-		<div class="page">
-			<div class="navigation">
-				<div>
+	<title>Thank you for purchasing FileBot! 💯</title>
+	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="stylesheet" href="base.css" type="text/css">
+	<link rel="stylesheet" href="thanks.css" type="text/css">
+</head>
+<body>
+	<div class="page">
+		<div class="navigation">
+			<div>
 				<ul>
 					<li><a href="forums/">Forums</a></li>
 					<li><a href="manual.html">FAQ</a></li>
 					<li><a href="download.html">Download</a></li>
 				</ul>
-				</div>
-			</div>
-
-			<div class="header">
-				<a href="/"><img class="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
-				<h1>
-					FileBot
-					<span class="description">Paddle Checkout Complete</span>
-				</h1>
-			</div>
-
-			<div class="content">
-				<div class="screenshot mail">
-					<a href="https://mail.google.com/">
-						<img src="images/mail.png" width="124" height="165" />
-					</a>
-				</div>
-				<div class="section about">
-					<h2>Thank you for purchasing FileBot! 💯</h2>
-					<p>
-						Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
-					</p>
-					<a class="box" href="https://drive.google.com/">
-						<img src="images/information.png" width="48" height="48" />
-						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
-					</a>
-				</div>
-
-				<div class="section tutorial">
-					<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
-					<h2>Next Steps</h2>
-					<p>
-					Please <strong>Select & Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
-					</p>
-					<div class="screenshot">
-						<div class="step">1</div>
-						<img alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
-					</div>
-					<div class="screenshot">
-						<div class="step">2</div>
-						<img alt="Paste License Key" src="screenshots/license.popup.png" width="220" height="270" />
-					</div>
-				</div>
-
-				<p class="suggestion">
-					📘 &nbsp; Please read <a href="activate.html">How do I activate my license?</a> for additional license activation options.
-				</p>
-
-				<div class="section contact">
-					<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
-					<h2>Contact</h2>
-					<p>
-						If you have received <strong>no email</strong> at all then you have likely <a href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a href="contact/paddle.html">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
-					</p>
-					<p>
-						<a href="contact/paddle.html">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a href="contact/paddle.html">contact Paddle</a> if you have any questions regarding your purchase.
-					</p>
-				</div>
-
-				<div class="metrics"></div>
-
-				<div class="footer">
-					<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
-				</div>
 			</div>
 		</div>
-	</body>
+
+		<div class="header">
+			<a href="/"><img class="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<h1>
+				FileBot
+				<span class="description">Paddle Checkout Complete</span>
+			</h1>
+		</div>
+
+		<div class="content">
+			<div class="screenshot mail">
+				<a href="https://mail.google.com/">
+					<img src="images/mail.png" width="124" height="165" />
+				</a>
+			</div>
+			<div class="section about">
+				<h2>Thank you for purchasing FileBot! 💯</h2>
+				<p>
+					Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
+				</p>
+				<a class="box" href="https://drive.google.com/">
+					<img src="images/information.png" width="48" height="48" />
+					Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
+				</a>
+			</div>
+
+			<div class="section tutorial">
+				<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
+				<h2>Next Steps</h2>
+				<p>
+					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
+				</p>
+				<div class="screenshot">
+					<div class="step">1</div>
+					<img alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
+				</div>
+				<div class="screenshot">
+					<div class="step">2</div>
+					<img alt="Paste License Key" src="screenshots/license.popup.png" width="220" height="270" />
+				</div>
+			</div>
+
+			<p class="suggestion">
+				📘 &nbsp; Please read <a href="activate.html">How do I activate my license?</a> for additional license activation options.
+			</p>
+
+			<div class="section contact">
+				<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
+				<h2>Contact</h2>
+				<p>
+					If you have received <strong>no email</strong> at all then you have likely <a href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a href="contact/paddle.html">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
+				</p>
+				<p>
+					<a href="contact/paddle.html">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a href="contact/paddle.html">contact Paddle</a> if you have any questions regarding your purchase.
+				</p>
+			</div>
+
+			<div class="metrics"></div>
+
+			<div class="footer">
+				<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
