--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -1,102 +1,102 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<base href="@{link.site.index}">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<base href="@{link.site.index}">
 
-		<title>Download FileBot</title>
-		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
-		<link rel="stylesheet" href="base.css" type="text/css">
-		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
-	</head>
-	<body>
-		<div class="page">
-			<div class="navigation">
-				<div>
+	<title>Download FileBot</title>
+	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="stylesheet" href="base.css" type="text/css">
+	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
+</head>
+<body>
+	<div class="page">
+		<div class="navigation">
+			<div>
 				<ul>
 					<li><a href="forums/">Forums</a></li>
 					<li><a href="manual.html">FAQ</a></li>
 					<li><a href="download.html">Download</a></li>
 				</ul>
-				</div>
-			</div>
-
-			<div class="header">
-				<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
-				<h1>
-					FileBot Downloads
-					<span class="description">Installer packages for Windows, Mac and Linux</span>
-				</h1>
-			</div>
-
-			<div class="content">
-				<div class="section download">
-					<img class="icon light" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
-					<h2>FileBot for Windows</h2>
-					<ul class="list">
-						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
-						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
-						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
-						<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
-					</ul>
-				</div>
-
-				<div class="section download">
-					<img class="icon light" src="images/apple.logo.svg" alt="download" width="42" height="42" />
-					<h2>FileBot for macOS</h2>
-					<ul class="list">
-						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
-						<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
-						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
-					</ul>
-				</div>
-
-				<div class="section download">
-					<img class="icon light" src="images/ubuntu.logo.svg" alt="download" width="48" height="48" />
-					<h2>FileBot for Ubuntu and Debian Linux</h2>
-					<ul class="list">
-						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
-						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
-					</ul>
-				</div>
-
-				<div class="section download">
-					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
-					<h2>FileBot for all POSIX platforms</h2>
-					<ul class="list">
-						<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">(requires OpenJDK 11)</small></li>
-						<li>POSIX legacy package: <a href="@{link.release.prefix}-portable-jdk8.tar.xz">@{release}-portable-jdk8.tar.xz</a> <small class="comment">(requires OpenJDK 8)</small></li>
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a>
-						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
-						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
-						<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
-						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
-					</ul>
-				</div>
-
-				<div class="section download">
-					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
-					<h2>FileBot for Synology DSM and QNAP QTS </h2>
-					<ul class="list">
-						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
-						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
-					</ul>
-				</div>
-
-				<div class="section download">
-					<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
-					<h2>Release Archives</h2>
-					<ul class="list">
-						<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
-					</ul>
-				</div>
-
-				<div class="metrics"></div>
-
-				<div class="footer">
-					<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
-				</div>
 			</div>
 		</div>
-	</body>
+
+		<div class="header">
+			<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<h1>
+				FileBot Downloads
+				<span class="description">Installer packages for Windows, Mac and Linux</span>
+			</h1>
+		</div>
+
+		<div class="content">
+			<div class="section download">
+				<img class="icon light" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
+				<h2>FileBot for Windows</h2>
+				<ul class="list">
+					<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+					<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
+					<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
+					<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
+				</ul>
+			</div>
+
+			<div class="section download">
+				<img class="icon light" src="images/apple.logo.svg" alt="download" width="42" height="42" />
+				<h2>FileBot for macOS</h2>
+				<ul class="list">
+					<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
+					<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
+					<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
+				</ul>
+			</div>
+
+			<div class="section download">
+				<img class="icon light" src="images/ubuntu.logo.svg" alt="download" width="48" height="48" />
+				<h2>FileBot for Ubuntu and Debian Linux</h2>
+				<ul class="list">
+					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
+					<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
+				</ul>
+			</div>
+
+			<div class="section download">
+				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<h2>FileBot for all POSIX platforms</h2>
+				<ul class="list">
+					<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">(requires OpenJDK 11)</small></li>
+					<li>POSIX legacy package: <a href="@{link.release.prefix}-portable-jdk8.tar.xz">@{release}-portable-jdk8.tar.xz</a> <small class="comment">(requires OpenJDK 8)</small></li>
+					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
+					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
+					<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
+					<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
+					<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
+				</ul>
+			</div>
+
+			<div class="section download">
+				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<h2>FileBot for Synology DSM and QNAP QTS </h2>
+				<ul class="list">
+					<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
+					<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
+				</ul>
+			</div>
+
+			<div class="section download">
+				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<h2>Release Archives</h2>
+				<ul class="list">
+					<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
+				</ul>
+			</div>
+
+			<div class="metrics"></div>
+
+			<div class="footer">
+				<p><a href="/">FileBot Media Renamer</a> | <a href="eula.html">License Agreement</a> | <a href="privacy.txt">Privacy Policy</a> | Copyright @{tstamp.year} @{package.company}</p>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
