--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<base href="@{link.site.index}">
@@ -43,7 +43,7 @@
 		</div>
 
 		<div class="header">
-			<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<a href="/"><img alt="FileBot" class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 			<h1>
 				FileBot
 				<a href="forums/viewforum.php?f=7" class="source">v@{application.version}</a>
@@ -68,7 +68,7 @@
 			<div class="review light">
 				<a class="box" href="reviews.html" id="review" style="display: none">
 					<div class="thumbs up">
-						<img src="images/thumbs_up.png" />
+						<img alt="Like" src="images/thumbs_up.png" />
 					</div>
 					<div>
 						<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
@@ -99,14 +99,14 @@
 					<li>Hit <span class="label">Download</span></li>
 				</ol>
 				<p>
-					<strong>Run FileBot on unattended automated systems.</strong> FileBot offers a simple <acronym title="Command-line Interface"><a href="cli.html">CLI</a></acronym> for common use cases, and a built-in <a href="script.html">scripting engine</a> for more complex tasks.
+					<strong>Run FileBot on unattended automated systems.</strong> FileBot offers a simple <a title="Command-line Interface" href="cli.html">CLI</a> for common use cases, and a built-in <a href="script.html">scripting engine</a> for more complex tasks.
 				</p>
 				<code><kbd class="cmd">filebot</kbd> <kbd class="option">-rename</kbd> <kbd class="argument">*.mkv</kbd></code>
 				<p>
 					Your <strong>fully automated media center</strong> is one <a href="script.html">filebot</a> command away – extract archives, identify and organize media files, fetch additional artwork and metadata, update Plex, and more – the <a href="amc.html">amc script</a> does it all.
 				</p>
 				<div class="video light">
-					<iframe src="getting-started/index.html" frameborder="0" allowfullscreen="true"></iframe>
+					<iframe src="getting-started/index.html" allowfullscreen></iframe>
 				</div>
 			</div>
 
@@ -151,8 +151,8 @@
 					<li>Advanced logic for matching files to most suitable subtitles</li>
 					<li>Find <dfn>exact</dfn> subtitles on OpenSubtitles</li>
 					<li>Upload subtitles with movie hash to OpenSubtitles</li>
-					<li>Integrated subtitle viewer for <acronym title="SubRip">srt</acronym>, <acronym title="Advanced SubStation Alpha">ass</acronym> and <acronym title="MicroDVD and SubViewer">sub</acronym> files</li>
-					<li>Transcode any subtitle as UTF-8 encoded <acronym title="SubRip">srt</acronym></li>
+					<li>Integrated subtitle viewer for <abbr title="SubRip">srt</abbr>, <abbr title="Advanced SubStation Alpha">ass</abbr> and <abbr title="MicroDVD and SubViewer">sub</abbr> files</li>
+					<li>Transcode any subtitle as UTF-8 encoded <abbr title="SubRip">srt</abbr></li>
 				</ul>
 				<ul class="list next" id="sfv">
 					<li>
@@ -161,7 +161,7 @@
 								<img width="150" height="118" src="screenshots/small/panel.sfv.png" alt="Verify SFV files" />
 							</a>
 						</div>
-						Easily create and verify <acronym title="simple file verification">sfv</acronym>, <acronym title="md5sum">md5</acronym>, <acronym title="sha1sum">sha1</acronym> and <acronym title="sha256sum">sha256</acronym> files
+						Easily create and verify <abbr title="simple file verification">sfv</abbr>, <abbr title="md5sum">md5</abbr>, <abbr title="sha1sum">sha1</abbr> and <abbr title="sha256sum">sha256</abbr> files
 					</li>
 					<li>Aware of checksums that are embedded in the filename<br/><span class="note light anime">common in anime releases</span></li>
 					<li>Directly compare two or more directory trees</li>
@@ -172,7 +172,7 @@
 						Identify and rename music using <a href="https://acoustid.org/">AcoustID</a> audio-fingerprints and <a href="https://musicbrainz.org/">MusicBrainz</a> info.
 					</li>
 					<li>
-						Extract files from <acronym title=".zip files">zip</acronym>, multi-volume <acronym title=".rar files">rar</acronym> and <acronym title=".7z files">7zip</acronym> archives as well as <acronym title=".ISO files">ISO images</acronym>.
+						Extract files from <abbr title=".zip files">zip</abbr>, multi-volume <abbr title=".rar files">rar</abbr> and <abbr title=".7z files">7zip</abbr> archives as well as <abbr title=".ISO files">ISO images</abbr>.
 					</li>
 				</ul>
 			</div>
@@ -228,7 +228,7 @@
 				<h2>Contact</h2>
 				<p>
 					The project is continuously seeking for improvements, so any kind of <a href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
-					and if there's any questions or problems just start posting in the <a href="forums/">forums</a> or check the <a href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
+					and if there's any questions or problems just start posting in the <a href="forums/">forums</a> or check the <a href="manual.html">FAQ</a>.
 					We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a href="https://www.facebook.com/filebot">facebook</a> or join our <a href="channel.html">Discord </a> channel.
 				</p>
 			</div>
