--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -50,7 +50,7 @@
 				<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
 				<h2>Next Steps</h2>
 				<p>
-					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
+					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <abbr title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</abbr> in the <strong>License Key</strong> section.
 				</p>
 				<div class="screenshot">
 					<div class="step">1</div>
