--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<base href="@{link.site.index}">
@@ -14,7 +14,7 @@
 <body>
 	<div class="page">
 		<div class="header">
-			<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<a href="/"><img alt="FileBot" class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 			<h1><span>End User License Agreement</span></h1>
 		</div>
 		<div class="content">
