--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<base href="@{link.site.index}" target="_blank">
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="header">
-			<a href="/"><img class="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<a href="/"><img alt="FileBot" class="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 			<h1>
 				FileBot
 				<span class="description">Paddle Checkout Complete</span>
@@ -32,7 +32,7 @@
 		<div class="content">
 			<div class="screenshot mail">
 				<a href="https://mail.google.com/">
-					<img src="images/mail.png" width="124" height="165" />
+					<img alt="You've got Mail!" src="images/mail.png" width="124" height="165" />
 				</a>
 			</div>
 			<div class="section about">
@@ -41,7 +41,7 @@
 					Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
 				</p>
 				<a class="box" href="https://drive.google.com/">
-					<img src="images/information.png" width="48" height="48" />
+					<img alt="Listen!" src="images/information.png" width="48" height="48" />
 					Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
 				</a>
 			</div>
@@ -50,7 +50,7 @@
 				<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
 				<h2>Next Steps</h2>
 				<p>
-					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <abbr title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</abbr> in the <strong>License Key</strong> section.
+					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <abbr title="-----BEGIN PGP SIGNED MESSAGE-----&#10;⋮&#10;-----BEGIN PGP SIGNATURE-----&#10;⋮&#10;-----END PGP SIGNATURE-----">entire text in the grey area</abbr> in the <strong>License Key</strong> section.
 				</p>
 				<div class="screenshot">
 					<div class="step">1</div>
