--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<base href="@{link.site.index}">
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="header">
-			<a href="/"><img class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
+			<a href="/"><img alt="FileBot" class="logo light" src="images/filebot.logo.svg" width="64" height="64" /></a>
 			<h1>
 				FileBot
 				<span class="description">Purchase a universal license</span>
@@ -36,7 +36,7 @@
 
 		<div class="content">
 			<div class="screenshot light">
-				<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169">
+				<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
 			</div>
 			<div class="section about">
 				<h2>Buy a License</h2>
