Fix screenshot margin

--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -35,7 +35,7 @@
 		</div>
 
 		<div class="content">
-			<div class="screenshot light">
+			<div class="screenshot column light">
 				<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
 			</div>
 			<div class="section about">
