--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -54,7 +54,7 @@
 				<p>
 					<code><kbd class="cmd">filebot</kbd> <kbd class="option">-script</kbd> <kbd class="argument">"path/to/script.groovy"</kbd> ...</code>
 					Execute a given Groovy script. <a href="manpage.html">Parameters</a> passed on the command-line when starting a script
-					will serve as default parameters for <a href="#functions">internal function calls</a>.
+					will serve as default parameters for <a href="#functions">function calls</a> within the script.
 				</p>
 
 				<h3>Script Repository</h3>
