Add String.match() docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -803,11 +803,11 @@
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">match</kbd>(<kbd class="regex">pattern</kbd>)</code>
-					Match pattern and return or unwind if pattern cannot be found.
+					Find and <a href="forums/viewtopic.php?t=12643">match a pattern</a>, or unwind if the given pattern cannot be found.
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">matchAll</kbd>(<kbd class="regex">pattern</kbd>)</code>
-					Match all occurrences of the given pattern or unwind if pattern cannot be found.
+					Find and match all occurrences of a pattern, or unwind if the given pattern cannot be found.
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">removeAll</kbd>(<kbd class="regex">pattern</kbd>)</code>
