--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -33,7 +33,7 @@
 
 		<div class="content">
 			<div class="screenshot column">
-				<a href="screenshots/cli.png"><img alt="FileBot command-line tools" width="330" src="screenshots/cli.png" /></a>
+				<a href="screenshots/cli.png"><img class="screenshot" alt="FileBot command-line tools" width="330" src="screenshots/cli.png" /></a>
 			</div>
 			<div class="section about column">
 				<h2>About</h2>
