--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -33,7 +33,7 @@
 
 		<div class="content">
 			<div class="screenshot column">
-				<a title="Edit Format Dialog" href="screenshots/format.png"><img alt="Edit Format Dialog" width="330" src="screenshots/format.png" /></a>
+				<a href="screenshots/format.png"><img class="screenshot" alt="Format Dialog" width="330" src="screenshots/format.png" /></a>
 			</div>
 			<div class="section about column">
 				<h2>About</h2>
