--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -36,7 +36,7 @@
 
 		<div class="content">
 			<div class="screenshot column light">
-				<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
+				<img class="screenshot" alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
 			</div>
 			<div class="section about">
 				<h2>Buy a License</h2>
