--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -33,7 +33,7 @@
 
 		<div class="content">
 			<div class="screenshot column">
-				<a href="https://github.com/filebot/scripts"><img alt="See Examples" width="330" src="screenshots/script.png" /></a>
+				<a href="https://github.com/filebot/scripts"><img class="screenshot" alt="See Examples" width="330" src="screenshots/script.png" /></a>
 			</div>
 			<div class="section about column">
 				<h2>About</h2>
