--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -32,7 +32,7 @@
 		<div class="content">
 			<div class="screenshot mail">
 				<a href="https://mail.google.com/">
-					<img alt="You've got Mail!" src="images/mail.png" width="124" height="165" />
+					<img class="screenshot" alt="You've got Mail!" src="images/mail.png" width="124" height="165" />
 				</a>
 			</div>
 			<div class="section about">
@@ -54,11 +54,11 @@
 				</p>
 				<div class="screenshot">
 					<div class="step">1</div>
-					<img alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
+					<img class="screenshot" alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
 				</div>
 				<div class="screenshot">
 					<div class="step">2</div>
-					<img alt="Paste License Key" src="screenshots/license.popup.png" width="220" height="270" />
+					<img class="screenshot" alt="Paste License Key" src="screenshots/license.popup.png" width="220" height="270" />
 				</div>
 			</div>
 
