--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -301,7 +301,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">az</kbd></td>
-						<td>sort collection name initial</td>
+						<td>sort collection letter</td>
 						<td>A</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
@@ -427,7 +427,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">vc</kbd></td>
-						<td>video codec</td>
+						<td>video codec library</td>
 						<td>x264</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
@@ -607,7 +607,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">db</kbd></td>
-						<td>dynamic cross-reference</td>
+						<td><a href="forums/viewtopic.php?t=2769">dynamic cross-reference</a></td>
 						<td>&lt;mapper&gt;</td>
 						<td><kbd class="type">[String:Any]</kbd></td>
 					</tr>
@@ -648,16 +648,10 @@
 						<td><kbd class="type">File*</kbd></td>
 					</tr>
 					<tr>
-						<td><kbd class="variable">mediaPath</kbd></td>
-						<td>media path</td>
-						<td>&lt;relative path&gt;</td>
+						<td><kbd class="variable">mediaFile</kbd></td>
+						<td>primary media file</td>
+						<td>&lt;file path&gt;</td>
 						<td><kbd class="type">File</kbd></td>
-					</tr>
-					<tr>
-						<td><kbd class="variable">mime</kbd></td>
-						<td>media type</td>
-						<td>[video, mkv]</td>
-						<td><kbd class="type">String*</kbd></td>
 					</tr>
 					<tr>
 						<td><kbd class="variable">mediaTitle</kbd></td>
