Update binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -715,7 +715,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">crc32</kbd></td>
-						<td>crc32 checksum</td>
+						<td><a href="forums/viewtopic.php?p=12396#p12396">CRC32 checksum</a></td>
 						<td>3E16AF40</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
