Add {ar} aspect ratio binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -528,6 +528,12 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">ar</kbd></td>
+						<td>aspect ratio</td>
+						<td>16∶9</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">ws</kbd></td>
 						<td>widescreen tag</td>
 						<td>WS</td>
