--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -850,7 +850,7 @@
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">sortName</kbd>()</code>
-					Convert to sort name.
+					Convert to <a href="forums/viewtopic.php?t=211">sort name</a>.
 					<small class="comment">(e.g. &quot;The Walking Dead&quot; ➔ &quot;Walking Dead&quot;)</small>
 				</p>
 				<p>
