Remove unused images

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -68,7 +68,7 @@
 			<div class="review light">
 				<a class="box" href="reviews.html" id="review" style="display: none">
 					<div class="thumbs up">
-						<img alt="Like" src="images/thumbs_up.png" />
+						<img alt="Like" src="images/thumbs.png" />
 					</div>
 					<div>
 						<p class="head">Posted by <span class="user"></span> on <span class="date"></span></p>
@@ -198,7 +198,7 @@
 			</div>
 
 			<div class="section purchase" id="purchase">
-				<img class="icon light" src="images/coin.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/purchase.png" alt="download" width="48" height="48" />
 				<span class="quote">We work to better ourselves</span>
 				<h2>Buy a License</h2>
 				<a id="year" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="index" data-product="532439">
