--- a/www.filebot.net/reviews.html
+++ b/www.filebot.net/reviews.html
@@ -22,7 +22,7 @@
 	<div class="review light">
 		<a class="box" href="{link}" id="{id}">
 			<div class="thumbs up">
-				<img alt="Like" src="images/thumbs_up.png" />
+				<img alt="Like" src="images/thumbs.png" />
 			</div>
 			<div>
 				<p class="head">Posted by <span class="user">{user}</span> on <span class="date">{date}</span></p>
